# langchain-learning

./: pyproject.toml
src/langchain_learning/agents/: linkedin_lookup.py
